代码清理（MC）